--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -110,6 +110,11 @@
 }
 
 /* flex集合 */
+.flex-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .item-center {
     display: flex;
     justify-content: center;
