--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -139,7 +139,7 @@ td {
 /* custom */
 a {
     outline: none;
-    color: #16418a;
+    // color: #16418a;
     text-decoration: none;
     -webkit-backface-visibility: hidden;
 }
